updated GitHub links

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -135,8 +135,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/digitalresume.jpg" alt="digital resume project" /></a>
-									<h3><a href="#">Digital Resume</a></h3>
+									<a href="https://github.com/TishaHolder" target="_blank" class="image featured"><img src="images/digitalresume.jpg" alt="digital resume project" /></a>
+									<h3><a href="https://github.com/TishaHolder" target="_blank">Digital Resume</a></h3>									
 									<p>My digital resume created using LESS preprocessor.</p>
 								</article>
 						</div>
@@ -144,24 +144,24 @@
 						
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/greatidea.jpg" alt="great idea flexbox project" /></a>
-								<h3><a href="#">Innovation on Demand</a></h3>
+								<a href="https://github.com/TishaHolder" target="_blank" class="image featured"><img src="images/greatidea.jpg" alt="great idea flexbox project" /></a>
+								<h3><a href="https://github.com/TishaHolder" target="_blank">Innovation on Demand</a></h3>
 								<p>This project explores the use of Flexbox to refactor a box model design.</p>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/sprintchallenge_userinterface.jpg" alt="sprint challenge - UI" /></a>
-								<h3><a href="#">Sprint Challenge - UI</a></h3>
+								<a href="https://github.com/TishaHolder" target="_blank" class="image featured"><img src="images/sprintchallenge_userinterface.jpg" alt="sprint challenge - UI" /></a>
+								<h3><a href="https://github.com/TishaHolder" target="_blank">Sprint Challenge - UI</a></h3>
 								<p>A website that demonstrates proficiency in CSS Fundamentals, and Flexbox.</p>
 							</article>
 						</div>
 
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/adaptivelayout.jpg" alt="flexbox project with adaptive layout" /></a>
-								<h3><a href="#">Adaptive Layout</a></h3>
+								<a href="https://github.com/TishaHolder" target="_blank" class="image featured"><img src="images/adaptivelayout.jpg" alt="flexbox project with adaptive layout" /></a>
+								<h3><a href="https://github.com/TishaHolder" target="_blank">Adaptive Layout</a></h3>
 								<p>A website refactored using a more Responsive Design.</p>
 							</article>
 						</div>
@@ -169,16 +169,16 @@
 						<div class="col-4 col-6-medium col-12-small">
 								<article class="box style2">
 									<!--<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>-->
-									<a href="#" class="image featured"><img src="images/sweeteatsbakery.jpg" alt="sweet eats bakery project" /></a>
-									<h3><a href="#">Sweet Eats Bakery</a></h3>
+									<a href="https://github.com/TishaHolder" target="_blank"class="image featured"><img src="images/sweeteatsbakery.jpg" alt="sweet eats bakery project" /></a>
+									<h3><a href="https://github.com/TishaHolder" target="_blank">Sweet Eats Bakery</a></h3>
 									<p>This project explores Selectors, Inheritance, and Semantic HTML.</p>
 								</article>
 						</div>
 						
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/funbus.png" alt="fun bus project" /></a>
-								<h3><a href="#">Fun Bus</a></h3>
+								<a href="https://github.com/TishaHolder" target="_blank" class="image featured"><img src="images/funbus.png" alt="fun bus project" /></a>
+								<h3><a href="https://github.com/TishaHolder" target="_blank">Fun Bus</a></h3>
 								<p>A responsive travel agent website created using LESS preprocessor.</p>
 							</article>
 						</div>
@@ -232,7 +232,7 @@
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<!--<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>-->
 								<!--<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>-->
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/TishaHolder" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
